# AIShell

./: CONTRIBUTION.md  Cargo.toml  LICENSE.md  README.md
resources/: AppIcon.icns
src/: executor.rs  main.rs
