[package]
name = "ai_shell"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["canvas", "tokio"]}

[package.metadata.bundle]
name = "AIshell"
identifier = "com.example.ai_shell"
icon = ["resources/AppIcon.icns"]
version = "0.1.0"

[package.metadata.bundle.macos]
frameworks = []